--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ li {
 a {
   color: inherit;
   text-decoration: none;
-  transition: co=lor 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
 }
 .l-section--blue button--primary.c-button--link:hover, .l-section--blue .c-button--primary.c-button--link:hover {
   color: #01203d;
