--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,15 @@
   font-family: Graphik-m;
   src: url("graphik_medium.woff");
 }
+/* body{
+  background: green;
+}
+.changeColor {
+  background: red;
+}
+.displayNone {
+  display: none;
+} */
 ins{
   text-decoration: none;
 }
@@ -18,6 +27,19 @@ ins{
 }
 .c-nav--mobile-only{
   display: none;
+}
+.c-nav.c-nav--mobile-only .c-nav-menu__item a[href="#"]:before {
+  content: "";
+  position: absolute;
+  right: 0;
+  width: 0;
+  height: 0;
+  top: 50%;
+  transform: translateY(-50%) rotate(0);
+  border-style: solid;
+  border-width: 3px 0 3px 5.2px;
+  border-color: transparent transparent transparent #5c6a6e;
+  transition: ease-in-out 0.1s transform
 }
 a {
   text-decoration: none;
@@ -214,6 +236,7 @@ li.dropdown:hover .dropdown-content {
 }
 .nav-content {
   padding: 12px 48px;
+  /* background: rgb(69, 111, 225); */
   background: rgba(241, 254, 244, 0.9);
   justify-content: space-between;
 }
@@ -330,6 +353,12 @@ li.dropdown:hover .dropdown-content {
 }
 .lower {
   margin-top: 45px;
+}
+
+.c-nav.c-nav--mobile-only .c-nav__mask>div{
+  width: 50%;
+    float: left;
+    padding: 16px;
 }
 /* .grp-hover img{
     width: 100%;
