--- a/css/index-media.css
+++ b/css/index-media.css
@@ -155,7 +155,29 @@ border: none;
         position: fixed;
         z-index: 999;
       }
-      
+      .header .slide-menu{
+        /* position: fixed; */
+        left: 0;
+        top: 100px;
+        width: 100%;
+        clear: both;
+        display: none;
+        /* max-height: 0; */
+        transition: max-height .2s ease-out;
+      }
+      .menu-btn_slide:checked ~ .slide-menu{
+        max-height: 500px;
+        display: block;
+        }
+        .sidenav input{
+          display: none;
+        }
+        /*show the slide-menu when input is checked*/
+input:checked~section.slide-menu {
+  display: block;
+  transition:display ease-out .3s;
+
+}
       .header ul {
         background: rgba(241,254,244,0.2);
 
@@ -210,6 +232,24 @@ border: none;
       }
       .logoo{
         padding: 16px;
+      }
+      
+      /* slide toggle */
+      .sidenav {
+        /* height: 100%; */
+        width: 0;
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background: rgba(241,254,0,0.2);
+        overflow: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+      }
+      #main {
+        transition: margin-left .5s;
+        /* padding: 16px; */
       }
       
       /* menu */
@@ -478,8 +518,14 @@ border: none;
         .group-one, .group-two{
           display: none;
         }
+        .foot-group h4{
+          margin-bottom: 0;
+        }
+        .foot-group i{
+          display: inline;
+        }
        /*hide the inputs/checkmarks and submenu*/
-.foot-group input,section.submenu{
+.foot-group input,section.submenu, #menu-btn_slide{
   display: none ;
 }
 .foot-group .foot-menu{
@@ -506,7 +552,8 @@ border: none;
 }
 .menu-btn2:checked ~ .foot-menu,.menu-btn1:checked ~ .foot-menu,.menu-btn3:checked ~ .foot-menu,
 .menu-btn4:checked ~ .foot-menu,.menu-btn5:checked ~ .foot-menu,
-.menu-btn6:checked ~ .foot-menu,.menu-btn7:checked ~ .foot-menu,.menu-btn8:checked ~ .foot-menu{
+.menu-btn6:checked ~ .foot-menu,.menu-btn7:checked ~ .foot-menu,.menu-btn8:checked ~ .foot-menu,
+.menu-btn_slide:checked ~ .slide-menu{
   max-height: 500px;
   display: block;
   }
@@ -526,7 +573,7 @@ border: none;
 } */
 
 /*show the foot-menu when input is checked*/
-input:checked~section.foot-menu {
+input:checked~section.foot-menu,input:checked~section.slide-menu {
   display: block;
   transition:display ease-out .3s;
 
